--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <!--_-_-_-_-_-_-_-_-_-_-_-_-_HEADER_-_-_-_-_-_-_-_-_-_-_-_-_-->
     <header>
 		<div class="div-logo">
-			<div class="logo"><a href="/index.html">AlejoCorona</a></div>
+			<div class="logo"><a href="index.html">AlejoCorona</a></div>
 			
 			<nav>
-				<a href="/index.html" id="boton1">Inicio</a>
-				<a href="/views/Productos.html" id="boton2">Productos</a>
-				<a href="/views/presupuesto.html" id="boton3">Presupuestos</a>
-				<a href="/views/contacto.html" id="boton4">Contacto</a>
+				<a href="index.html" id="boton1">Inicio</a>
+				<a href="views/Productos.html" id="boton2">Productos</a>
+				<a href="views/presupuesto.html" id="boton3">Presupuestos</a>
+				<a href="views/contacto.html" id="boton4">Contacto</a>
 			</nav>
 		</div>
 	</header>
