--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div> 
 
                 <div>
-                    <a href="/views/Productos.html">Todos Los Productos</a>
+                    <a href="views/Productos.html">Todoes Los Productos</a>
                 </div>
                
             </div>
