--- a/index.html
+++ b/index.html
@@ -30,30 +30,30 @@
             <ul>
                 <li>
                     <picture>
-                        <source media="(max-width:700px)" srcset="/assets/images/relojesvertical1.jpeg"> 
+                        <source media="(max-width:700px)" srcset="assets/images/relojesvertical1.jpeg"> 
                         
-                        <img src="/assets/images/relojes1.jpeg" alt="imagen de relojes">
+                        <img src="assets/images/relojes1.jpeg" alt="imagen de relojes">
                      </picture>
                 </li>
                 <li>
                     <picture>
-                        <source media="(max-width:500px)" srcset="/assets/images/relojesvertical2.jpeg"> 
-                        <source media="(max-width:750px)" srcset="/assets/images/relojesmedio2.jpeg"> 
-                        <img src="/assets/images/relojes2.jpeg" alt="imagen de relojes">
+                        <source media="(max-width:500px)" srcset="assets/images/relojesvertical2.jpeg"> 
+                        <source media="(max-width:750px)" srcset="assets/images/relojesmedio2.jpeg"> 
+                        <img src="assets/images/relojes2.jpeg" alt="imagen de relojes">
                      </picture>
                 </li>
                 <li>
                     <picture>
-                        <source media="(max-width:500px)" srcset="/assets/images/relojesvertical3.jpeg"> 
-                        <source media="(max-width:750px)" srcset="/assets/images/relojesmedio3.jpeg"> 
-                        <img src="/assets/images/relojes3.jpeg" alt="imagen de relojes">
+                        <source media="(max-width:500px)" srcset="assets/images/relojesvertical3.jpeg"> 
+                        <source media="(max-width:750px)" srcset="assets/images/relojesmedio3.jpeg"> 
+                        <img src="assets/images/relojes3.jpeg" alt="imagen de relojes">
                      </picture>
                 </li>
                 <li>
                     <picture>
-                        <source media="(max-width:550px)" srcset="/assets/images/relojesvertical4.jpeg"> 
-                        <source media="(max-width:800px)" srcset="/assets/images/relojesmedio4.jpeg"> 
-                        <img src="/assets/images/relojes4.jpeg" alt="imagen de relojes">
+                        <source media="(max-width:550px)" srcset="assets/images/relojesvertical4.jpeg"> 
+                        <source media="(max-width:800px)" srcset="assets/images/relojesmedio4.jpeg"> 
+                        <img src="assets/images/relojes4.jpeg" alt="imagen de relojes">
                      </picture>
                 </li>    
             </ul>
@@ -64,27 +64,27 @@
             <h2>Descubre Productos</h2>
             <div id="relojes">
                 <div>
-                   <img src="/assets/images/pagina1.png" alt="imagen de un reloj">
-                   <img src="/assets/images/pagina2.png" alt="imagen de un reloj">
+                   <img src="assets/images/pagina1.png" alt="imagen de un reloj">
+                   <img src="assets/images/pagina2.png" alt="imagen de un reloj">
                 </div>
 
                 <div>
-                    <img src="/assets/images/pagina3.png" alt="imagen de un reloj">
-                    <img src="/assets/images/pagina4.png" alt="imagen de un reloj">   
+                    <img src="assets/images/pagina3.png" alt="imagen de un reloj">
+                    <img src="assets/images/pagina4.png" alt="imagen de un reloj">   
                 </div >
 
                 <div>
-                    <img src="/assets/images/pagina5.png" alt="imagen de un reloj">
-                    <img src="/assets/images/pagina6.png" alt="imagen de un reloj">
+                    <img src="assets/images/pagina5.png" alt="imagen de un reloj">
+                    <img src="assets/images/pagina6.png" alt="imagen de un reloj">
                 </div>
 
                 <div>
-                    <img src="/assets/images/pagina7.png" alt="imagen de un reloj">
-                    <img src="/assets/images/pagina8.png" alt="imagen de un reloj">
+                    <img src="assets/images/pagina7.png" alt="imagen de un reloj">
+                    <img src="assets/images/pagina8.png" alt="imagen de un reloj">
                 </div> 
 
                 <div>
-                    <a href="views/Productos.html">Todoes Los Productos</a>
+                    <a href="views/Productos.html">Todos Los Productos</a>
                 </div>
                
             </div>
